--- a/src/Marvelous.Maui/Views/Controls/EventCard.xaml
+++ b/src/Marvelous.Maui/Views/Controls/EventCard.xaml
@@ -1,12 +1,13 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:models="clr-namespace:Marvelous.Core.Models;assembly=Marvelous.Core"
-             x:Class="Marvelous.Maui.Views.Controls.EventCard"
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<ContentView
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:models="clr-namespace:Marvelous.Core.Models;assembly=Marvelous.Core"
+    x:Class="Marvelous.Maui.Views.Controls.EventCard"
              
-             x:DataType="models:TimelineEvent"
+    x:DataType="models:TimelineEvent"
              
-             Background="{StaticResource TertiaryBrush}">
+    Background="{StaticResource TertiaryBrush}">
 
     <Grid
         ColumnDefinitions="70, 3, *"
