--- a/src/Marvelous.Maui/Views/Controls/UImagesView.xaml
+++ b/src/Marvelous.Maui/Views/Controls/UImagesView.xaml
@@ -1,24 +1,23 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="Marvelous.Maui.Views.Controls.UImagesView">
 
     <Grid
-        ColumnDefinitions="*, *, *, *, *"
+        ColumnDefinitions="3*, 5*"
         CompressedLayout.IsHeadless="True">
         <GraphicsView
             x:Name="graphicsView"
-            Grid.ColumnSpan="5"/>
+            Grid.ColumnSpan="2"/>
         <Image
             x:Name="leftImage"
-            Grid.ColumnSpan="2"
             Aspect="AspectFill"
             Margin="10, 0, 0, 0"
             SizeChanged="ImageSizeChanged"/>
         <Image
             x:Name="rightImage"
-            Grid.Column="2" Grid.ColumnSpan="3"
+            Grid.Column="1"
             Aspect="AspectFill"
             Margin="0, 0, 10, 0"
             SizeChanged="ImageSizeChanged"/>
