--- a/src/Marvelous.Maui/App.xaml
+++ b/src/Marvelous.Maui/App.xaml
@@ -36,6 +36,8 @@
             <converters:CollectibleStateToIsNotVisibleConverter x:Key="CollectibleStateToIsNotVisibleConverter"/>
             <converters:ZeroToFalseConverter x:Key="ZeroToFalseConverter"/>
             <converters:CountToPluralConverter x:Key="CountToPluralConverter"/>
+            <converters:EmptyToSpacesConverter x:Key="EmptyToSpacesConverter"/>
+            <converters:EmptyToSpacesLocalizationConverter x:Key="EmptyToSpacesLocalizationConverter"/>
 
             <Style TargetType="ContentPage" ApplyToDerivedTypes="True">
                 <Setter Property="Background" Value="{StaticResource DarkSecondaryBrush}"/>
@@ -78,11 +80,11 @@
                 <Setter Property="TextColor" Value="White"/>
                 <Setter Property="FontFamily" Value="YesevaOne"/>
                 <Setter Property="HorizontalOptions" Value="Center"/>
-                <Setter Property="VerticalOptions" Value="End"/>
+                <Setter Property="VerticalOptions" Value="Center"/>
                 <Setter Property="HorizontalTextAlignment" Value="Center"/>
-                <Setter Property="Margin" Value="20,0,20,125"/>
+                <Setter Property="VerticalTextAlignment" Value="Center"/>
                 <Setter Property="LineHeight" Value="0.8"/>
-                <Setter Property="FontSize" Value="54"/>
+                <Setter Property="FontSize" Value="50"/>
                 <!-- TODO: Shadows are broken on Android -->
                 <!-- <Setter Property="Shadow">
                     <Setter.Value>
