--- a/src/Marvelous.Maui/Views/Controls/WonderTitle.xaml
+++ b/src/Marvelous.Maui/Views/Controls/WonderTitle.xaml
@@ -2,11 +2,11 @@
 <ContentView
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class="Marvelous.Maui.Views.Controls.WonderTitle"
-    CompressedLayout.IsHeadless="True">
-    
+    x:Class="Marvelous.Maui.Views.Controls.WonderTitle">
+
     <Label
         x:Name="illustrationTitle"
-        Padding="0,5,0,0"
-        Style="{StaticResource TitleStyle}"/>
+        Padding="0,5,0,5"
+        Style="{StaticResource TitleStyle}">
+    </Label>
 </ContentView>
