--- a/src/Marvelous.Maui/Views/Pages/ArtifactPage.xaml
+++ b/src/Marvelous.Maui/Views/Pages/ArtifactPage.xaml
@@ -138,9 +138,7 @@
             x:Name="appBar"
             VerticalOptions="Start"
             HeightRequest="{StaticResource AppBarHeight}"
-            CompressedLayout.IsHeadless="True"
-            InputTransparent="True"
-            CascadeInputTransparent="False">
+            CompressedLayout.IsHeadless="True">
             <Border
                 x:Name="menuButtonBorder"
                 Style="{StaticResource AppBarButtonBorderStyle}"
