--- a/src/Marvelous.Maui/Views/Controls/HorizontalSeparator.xaml
+++ b/src/Marvelous.Maui/Views/Controls/HorizontalSeparator.xaml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
@@ -10,10 +10,10 @@
         ColumnSpacing="20"
         HeightRequest="28"
         CompressedLayout.IsHeadless="True">
-        <Rectangle
+        <ContentView
             x:Name="leftRect"
             AnchorX="1"
-            HeightRequest="1.5"
+            HeightRequest="1.2"
             VerticalOptions="Center"/>
 
         <simpleCore:Icon
@@ -21,11 +21,11 @@
             Source="common_compass_full.png"
             Grid.Column="1"/>
 
-        <Rectangle
+        <ContentView
             x:Name="rightRect"
             Grid.Column="2"
             AnchorX="0"
-            HeightRequest="1.5"
+            HeightRequest="1.2"
             VerticalOptions="Center"/>
     </Grid>
 </ContentView>
