Updated to .NET 8

--- a/src/Marvelous.Maui/Views/Controls/TabBar.xaml
+++ b/src/Marvelous.Maui/Views/Controls/TabBar.xaml
@@ -23,7 +23,7 @@
         RowDefinitions="10, 70, auto"
         ColumnDefinitions="*, *, *, *, *"
         CompressedLayout.IsHeadless="True">
-        <Rectangle
+        <ContentView
             x:Name="backgroundRect"
             Grid.Row="1" Grid.ColumnSpan="5" Grid.RowSpan="2"/>
 
